# modclub_src

./: .dockerignore   .gitattributes  .gitignore  .gitleaksignore  .prettierrc  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  canister_ids.json  dfx.json  docker-compose.yml  identitys_princpals.txt  mops.toml  neuron_request.json  package-lock.json  package-set.dhall  package.json  parser.py  register.json  sns.yml  sns_canister_ids.json  sns_canister_ids.json.qaTestFlight  test.sh  vessel.dhall  webpack.config.cjs  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  pull_request_template.md
.github/workflows/: PR_CI_build.yml  PR_CI_pipeline.yml  PR_CI_test.yml  PR_CI_test_feature.yml  create_proposal.yml  deploy_dev.yml  deploy_feature_branch.yml  deploy_qa.yml  main.yml  notify_slack_action  notify_slack_action.yml  openai-pr-reviewer.yml  update_base_cache.yml  webpack.yml
.husky/: pre-commit  pre-push
docs/backup/: readme.md
new_frontend/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: README.md  add_controller.sh  claim-test.sh  clean.sh  deployToEnv.sh  deploy_to_env.sh  e2e-test.sh  export_airdrop_data.sh  populate-airdrop-subaccounts.sh  restoreLeaderBoardPoints.sh  rsp-test.sh  security-test.sh  setup-local.sh  shutdown_test_infra.sh  ui-setup.sh  up_test_infra.sh  utils.sh
scripts/backup/: backup_util.sh
scripts/deployment/: build_utils.sh  deploy_to_env.sh  deployment_utils.sh  get_env_arguments.sh  gh_actions_deploy.sh  gh_actions_deploy_quick.sh  gh_backup.sh  gh_build_only.sh  gh_deployment_notify_end.cjs  gh_deployment_notify_starts.cjs  gh_pr_pipeline_test_runner.sh  slack_util.cjs
scripts/download_state/: download_state.py
scripts/infra/: pre_yarn_start.sh  seed_content.sh  shutdown_infra.sh  up_archive.sh  up_decide.sh  up_infra.sh
scripts/seeds/: add_token.sh  gen_content.sh  gen_provider.sh  mock_content.json  mock_html_content.json  parse_json_content.cjs
scripts/sns/: CanisterUpgradeProposal.cjs  NeuronREADME.md  README.md  assetCanisterUpgrade.cjs  asset_canister_upgrade.cjs  canister_upgrade_proposal.cjs  check_versions.cjs  controllerProposal.cjs  controller_proposal.cjs  executeFunctionProposal.cjs  execute_function_proposal.cjs  followNeuron.sh  follow_neuron.sh  functionProposal.cjs  function_proposal.cjs  ledger_function_proposal.cjs  snsConfig.cjs  sns_config.cjs  utils.cjs  vote.sh
scripts/tests/: deposit_withdraw_test.sh  e2e-test.sh  e2e_test.sh  ledger-tests.sh  ledger_tests.sh  new-e2e-test.sh  reserve-task-test.sh  reserve_task_test.sh  rsp-test.sh  rsp_test.sh  secrets_test.sh  security-test.sh  security_test.sh  stake_unstake.sh  test.sh  test_local.sh  vesting-canister-test.sh  vesting_canister_test.sh
scripts/upgrade-bucket/: generateConfig.cjs  mops.toml  upgradeBucket.sh  upgrade_bucket.sh
sdk/: README.md  modclub.mo
src/ICpch/: README.md  canister_ids.json  dfx.json  index.html  package-lock.json  package.json
src/airdrop/: airdrop.did  airdrop.wasm  main.mo  types.mo
src/archive/: main.mo
src/authentication/: main.mo  types.mo
src/common/: ICRCTypes.mo  constants.mo  helpers.mo  mainHelpers.mo  (+4 more)
src/decideid_assets/: Cargo.toml  build.sh  decideid_assets.did  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.cjs
src/decideid_assets/app/: AppContainer.tsx  actors_by_env.ts  canister_types.ts  index.tsx
src/decideid_assets/app/components/app/: Main.tsx
src/decideid_assets/app/components/auth/: AuthCheck.tsx  Logout.tsx
src/decideid_assets/app/components/auth/new_profile/: NewProfile.tsx
src/decideid_assets/app/components/header/: Header.tsx
src/decideid_assets/app/components/routers/: Authed.tsx
src/decideid_assets/app/generated_for_vc/: decideid_assets_idl.js  decideid_assets_types.d.ts
src/decideid_assets/app/hooks/: useCanister.ts  useProfile.tsx
src/decideid_assets/app/utils/: index.tsx  util.ts  vcIssuerClient.ts
src/decideid_assets/asset_util/src/: lib.rs
src/decideid_assets/src/: .ic-assets.json  App.tsx  AppContainer.tsx  Responsive.scss  actors_by_env.ts  canister_types.ts  common.scss  declaration.d.ts  globals.css  index.html  index.tsx  main.rs
src/decideid_assets/src/canister_sig_util/: Cargo.toml
src/decideid_assets/src/components/app/: App.tsx  AuthApp.tsx  Main.tsx  ModclubApp.tsx
src/decideid_assets/src/components/app/modals/: NotAuthenticated.tsx
src/decideid_assets/src/components/auth/: AuthCheck.tsx  Logout.tsx  SignIn.tsx
src/decideid_assets/src/components/auth/new_profile/: NewProfile.tsx
src/decideid_assets/src/components/header/: Hamburger.scss  Header.tsx
src/decideid_assets/src/components/routers/: Authed.tsx  External.tsx
src/decideid_assets/src/contexts/: auth.tsx  profile.tsx
src/decideid_assets/src/hooks/: actors.tsx  useProfile.tsx
src/decideid_assets/src/utils/: api.ts  gtm.ts  index.tsx  jwt.ts  logger.ts  types.ts  util.ts
src/decideid_assets/vc_util/: Cargo.toml
src/modclub_assets/asset_util/: Cargo.toml
src/modclub_assets/asset_util/src/: lib.rs
src/modclub_assets/canister_sig_util/: Cargo.toml
(+776 files in other folders)
