[workspace]
members = [
    "src/vc_rust",
]

[workspace.dependencies]
# ic dependencies
candid = "0.10"
candid_parser = "0.1.2"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-certification = "2.2"
ic-http-certification = "2.2"
ic-metrics-encoder = "1"
ic-representation-independent-hash = "2.2"
ic-response-verification = "2.2"
ic-stable-structures = "0.6"
ic-test-state-machine-client = "3"
hex = "0.4"
lazy_static = "1.4"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "^0.10" # set bound to match ic-certified-map bound
assert_matches = "1.5.0"
serde = { version = "1", features = ["derive"] }

canister_sig_util = { path = "./src/vc_rust/canister_sig_util" }