[package]
name = "asset_util"
description = "Asset certification utility library for asset serving canisters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-certification = "2.2"
ic-representation-independent-hash = "2.2"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
serde_cbor = "0.11"
sha2 = "^0.10" # set bound to match ic-certified-map bound
